# ml-deploy-batch-rest

./: .gitignore  Dockerfile  README.md  pyproject.toml  train_model.py
data/: input_batch_iris.csv
scripts/: run_batch_packaged.sh
src/iris_predictor/: api.py  batch.py
tests/: test_api.py  test_batch.py  test_data.py
