# Hatchling as the build system
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# metadata
[project]
name = "iris_predictor"
version = "0.1.1"
description = "Iris model batch prediction and API deployment package."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" } # Or choose another license
# Add your name/email if desired
authors = [
    { name = "mtech00", email = "mtech00@example.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Dependencies needed API and Batch)
dependencies = [
	"pytest>=7.0.0",
	"pytest-cov>=4.0.0",
    "flask>=2.0.0",
    "pandas>=1.3",
    "numpy>=1.20",
    "scikit-learn>=1.0",
]

# command-line scripts
[project.scripts]
run-iris-batch = "iris_predictor.batch:main"
rest-api = "iris_predictor.api:main"


# Tells Hatch where to find the package code within the 'src' directory
[tool.hatch.build.targets.wheel]
packages = ["src/iris_predictor"]


# Optional: Project URLs
# [project.urls]
# Homepage = "..."
# Repository = "..."
